# DjangoREST-HybridDatabase-Test

./: .env.sample  .gitignore  README.md  docker-compose.yml  init-mongo.js  pyproject.toml
backend/: settings.py  urls.py
backend/core/: router.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: __init__.py  author.py  event.py  submission.py  submission_record.py  user.py  user_record.py
backend/core/serializers/: __init__.py  author.py  event.py  submission.py  submission_record.py  tools.py  user.py  user_record.py
backend/core/views/: __init__.py  event.py  submission.py  submission_record.py  user.py  user_record.py
