[tool.poetry]
name = "django-hybridbase"
version = "0.1.0"
description = "Um projeto simples para demonstrar um ambiente rest com banco de dados híbrido."
authors = ["Henrique Luiz Hartmann"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
