[tool.poetry]
name = "django-hybridbase"
version = "0.1.0"
description = "Um projeto simples para demonstrar um ambiente rest com banco de dados híbrido."
authors = ["Henrique Luiz Hartmann"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
django = "^3.1.1"
djangorestframework = "^3.11.1"
djangorestframework-simplejwt = "^4.4.0"
django-cors-headers = "^3.5.0"
mongoengine = "^0.20.0"
django-rest-framework-mongoengine = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
